[gd_scene load_steps=94 format=2]

[ext_resource path="res://scripts/Behaviors/AmbienceBehavior.gd" type="Script" id=1]
[ext_resource path="res://data/private/sounds/music/InGameBG01.ogg" type="AudioStream" id=2]
[ext_resource path="res://data/private/sounds/sfx/lowhealth.wav" type="AudioStream" id=3]
[ext_resource path="res://data/private/sounds/sfx/lowenergy.wav" type="AudioStream" id=4]
[ext_resource path="res://data/private/sounds/sfx/converter.wav" type="AudioStream" id=5]
[ext_resource path="res://data/private/sounds/sfx/inventory/gb-equip-test-auda.wav" type="AudioStream" id=6]
[ext_resource path="res://data/private/sounds/sfx/warp/sfx_movement_portal6.wav" type="AudioStream" id=7]
[ext_resource path="res://data/private/sounds/sfx/inventory/gb-jettison-test.wav" type="AudioStream" id=8]
[ext_resource path="res://data/private/sounds/sfx/inventory/gb-pickup-test.wav" type="AudioStream" id=9]
[ext_resource path="res://scripts/Behaviors/UIManager.gd" type="Script" id=10]
[ext_resource path="res://data/animations/popin_shader.tres" type="Animation" id=11]
[ext_resource path="res://scripts/Behaviors/MemoryBehavior.gd" type="Script" id=12]
[ext_resource path="res://scripts/Behaviors/ScannerBehavior.gd" type="Script" id=13]
[ext_resource path="res://scripts/Behaviors/APBehavior.gd" type="Script" id=14]
[ext_resource path="res://scripts/Behaviors/SpriteLoaderBehavior.gd" type="Script" id=15]
[ext_resource path="res://data/shaders/Sprite-desaturate.tres" type="Material" id=16]
[ext_resource path="res://scripts/Behaviors/OutlinesBehavior.gd" type="Script" id=17]
[ext_resource path="res://scripts/Behaviors/CompactorBehavior.gd" type="Script" id=18]
[ext_resource path="res://scripts/Behaviors/PlayerBehavior.gd" type="Script" id=19]
[ext_resource path="res://scripts/Behaviors/AIBehavior.gd" type="Script" id=20]
[ext_resource path="res://scripts/Behaviors/DamageBehavior.gd" type="Script" id=21]
[ext_resource path="res://scripts/Behaviors/ShieldBehavior.gd" type="Script" id=22]
[ext_resource path="res://scripts/Behaviors/AnomalyBehavior.gd" type="Script" id=23]
[ext_resource path="res://scripts/Behaviors/InventoryBehavior.gd" type="Script" id=24]
[ext_resource path="res://scripts/Behaviors/LevelLoaderBehavior.gd" type="Script" id=25]
[ext_resource path="res://scripts/Behaviors/MovementBehavior.gd" type="Script" id=26]
[ext_resource path="res://scripts/Behaviors/CraftingBehavior.gd" type="Script" id=27]
[ext_resource path="res://scripts/Behaviors/ScoringBehavior.gd" type="Script" id=28]
[ext_resource path="res://scripts/Behaviors/TargettingBehavior.gd" type="Script" id=29]
[ext_resource path="res://scripts/Behaviors/AnimationBehavior.gd" type="Script" id=30]
[ext_resource path="res://scripts/Behaviors/EnergyRegen.gd" type="Script" id=31]
[ext_resource path="res://scripts/Behaviors/HullRegenBehavior.gd" type="Script" id=32]
[ext_resource path="res://scripts/Behaviors/TutorialBehavior.gd" type="Script" id=33]
[ext_resource path="res://data/private/textures/space/fractal_test.png" type="Texture" id=34]
[ext_resource path="res://scripts/ParallaxBG.gd" type="Script" id=35]
[ext_resource path="res://data/shaders/fow_mask.tres" type="Material" id=36]
[ext_resource path="res://scenes/scanner_fx.tscn" type="PackedScene" id=37]
[ext_resource path="res://scripts/GUI/mouse_targetting.gd" type="Script" id=38]
[ext_resource path="res://scenes/tileset_source/targetting_reticle.tscn" type="PackedScene" id=39]
[ext_resource path="res://scenes/GUI/HUD.tscn" type="PackedScene" id=40]
[ext_resource path="res://scripts/GUI/SafeArea.gd" type="Script" id=41]
[ext_resource path="res://scripts/CamControl.gd" type="Script" id=42]
[ext_resource path="res://scenes/FoW.tscn" type="PackedScene" id=43]
[ext_resource path="res://scripts/Behaviors/RandomLogBehavior.gd" type="Script" id=44]
[ext_resource path="res://scripts/Behaviors/EffectsBehavior.gd" type="Script" id=45]
[ext_resource path="res://scenes/GUI/HUD_pc.tscn" type="PackedScene" id=46]
[ext_resource path="res://scenes/GUI/HUD_swapper.gd" type="Script" id=47]
[ext_resource path="res://scripts/Behaviors/Runes/JergQueen.gd" type="Script" id=48]
[ext_resource path="res://scenes/GUI/Dialogs/Fade.tscn" type="PackedScene" id=49]
[ext_resource path="res://data/private/sounds/sfx/scanner/item1.wav" type="AudioStream" id=50]
[ext_resource path="res://scenes/GUI/TargettingHUD.tscn" type="PackedScene" id=51]
[ext_resource path="res://scenes/GUI/Dialogs/SelectableTarget.tscn" type="PackedScene" id=52]
[ext_resource path="res://scenes/GUI/Dialogs/Options.tscn" type="PackedScene" id=53]
[ext_resource path="res://scenes/GUI/Dialogs/ValidateDiag.tscn" type="PackedScene" id=54]
[ext_resource path="res://scenes/GUI/Dialogs/Tutorial.tscn" type="PackedScene" id=55]
[ext_resource path="res://scenes/GUI/Dialogs/InventoryV2.tscn" type="PackedScene" id=56]
[ext_resource path="res://scenes/GUI/Dialogs/TransferInventoryV2.tscn" type="PackedScene" id=57]
[ext_resource path="res://scenes/GUI/Dialogs/ConverterV2.tscn" type="PackedScene" id=58]
[ext_resource path="res://scenes/GUI/Dialogs/Settings.tscn" type="PackedScene" id=59]
[ext_resource path="res://scenes/GUI/Dialogs/WelcomeScreen.tscn" type="PackedScene" id=60]
[ext_resource path="res://scenes/GUI/Dialogs/HowManyDiag.tscn" type="PackedScene" id=61]
[ext_resource path="res://scenes/GUI/Dialogs/Description.tscn" type="PackedScene" id=62]
[ext_resource path="res://scenes/GUI/Debug/APBehaviorDebug.tscn" type="PackedScene" id=63]
[ext_resource path="res://scenes/GUI/Dialogs/TutoPrompt.tscn" type="PackedScene" id=64]
[ext_resource path="res://scenes/GUI/Debug/FPSCounter.tscn" type="PackedScene" id=65]
[ext_resource path="res://scenes/GUI/Dialogs/DeathScreen.tscn" type="PackedScene" id=66]
[ext_resource path="res://scenes/warp_trail_test.tscn" type="PackedScene" id=67]
[ext_resource path="res://scripts/Behaviors/LocalSaveBehavior.gd" type="Script" id=68]
[ext_resource path="res://scripts/Behaviors/Runes/Runaway.gd" type="Script" id=69]
[ext_resource path="res://data/private/sounds/sfx/scanner/planet3.wav" type="AudioStream" id=70]
[ext_resource path="res://scenes/BorderGenerator.tscn" type="PackedScene" id=71]
[ext_resource path="res://scenes/GUI/Dialogs/StoryPrompt.tscn" type="PackedScene" id=72]
[ext_resource path="res://scripts/Behaviors/Runes/Radiation.gd" type="Script" id=73]
[ext_resource path="res://scenes/GUI/Dialogs/Crew3.tscn" type="PackedScene" id=74]
[ext_resource path="res://scripts/Behaviors/Runes/NewFriend.gd" type="Script" id=75]
[ext_resource path="res://data/shaders/ui_vfx.shader" type="Shader" id=76]
[ext_resource path="res://scripts/GUI/TransitionContainer.gd" type="Script" id=77]
[ext_resource path="res://data/private/sounds/sfx/use-nanobots-gb.wav" type="AudioStream" id=78]
[ext_resource path="res://data/private/sounds/sfx/inventory/gb-cargo-2.wav" type="AudioStream" id=79]
[ext_resource path="res://scenes/GUI/Dialogs/Trading.tscn" type="PackedScene" id=80]
[ext_resource path="res://scripts/Behaviors/MerchantBehavior.gd" type="Script" id=81]
[ext_resource path="res://data/private/sounds/sfx/inventory/trading-gb.wav" type="AudioStream" id=82]
[ext_resource path="res://scripts/Behaviors/TeleportBehavior.gd" type="Script" id=83]
[ext_resource path="res://data/private/sounds/music/sr-victory-theme.ogg" type="AudioStream" id=84]
[ext_resource path="res://data/private/sounds/music/sr-defeat-theme.ogg" type="AudioStream" id=85]
[ext_resource path="res://data/private/sounds/sfx/scanner/ship4.wav" type="AudioStream" id=86]
[ext_resource path="res://scripts/Behaviors/ConsumableBehavior.gd" type="Script" id=87]
[ext_resource path="res://scripts/Behaviors/Runes/Assimilation.gd" type="Script" id=88]
[ext_resource path="res://scenes/GUI/Dialogs/HackTarget.tscn" type="PackedScene" id=89]
[ext_resource path="res://scenes/GUI/Dialogs/MultipleTarget.tscn" type="PackedScene" id=90]

[sub_resource type="Animation" id=1]
resource_name = "slow_popin"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/pixel")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8, 2 ),
"transitions": PoolRealArray( 2, 1, 1 ),
"update": 0,
"values": [ 10.0, 1.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/red_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3, 2 ),
"transitions": PoolRealArray( 2, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.1, -0.001 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/blue_offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3, 2 ),
"transitions": PoolRealArray( 2, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.001 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:material:shader_param/alpha")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 2 ),
"transitions": PoolRealArray( 0.5, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:material:shader_param/rand_strength")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.35, 0.75, 1.05, 1.45, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.4, 0.6, 0.9, 1.0, 1.0 ]
}

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 76 )
shader_param/pixel = 1.0
shader_param/red_offset = Vector2( 0, 0 )
shader_param/green_offset = Vector2( 0, 0 )
shader_param/blue_offset = Vector2( 0, 0 )
shader_param/alpha = 1.0
shader_param/rand_strength = 1.0
shader_param/affected = Plane( 0, 0, 1, 1 )

[sub_resource type="Animation" id=3]
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.1 ),
"transitions": PoolRealArray( 0.5, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.001 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, false ]
}

[node name="Root" type="Node"]

[node name="Behaviors" type="Node" parent="."]

[node name="Ambience" type="Node" parent="Behaviors"]
script = ExtResource( 1 )

[node name="BG" type="AudioStreamPlayer" parent="Behaviors/Ambience"]
stream = ExtResource( 2 )
bus = "Music"

[node name="Victory" type="AudioStreamPlayer" parent="Behaviors/Ambience"]
stream = ExtResource( 84 )
bus = "Music"

[node name="Defeat" type="AudioStreamPlayer" parent="Behaviors/Ambience"]
stream = ExtResource( 85 )
volume_db = 10.306
bus = "Music"

[node name="LowHullAlert" type="AudioStreamPlayer" parent="Behaviors/Ambience"]
stream = ExtResource( 3 )
bus = "Sfx"

[node name="LowEnergyAlert" type="AudioStreamPlayer" parent="Behaviors/Ambience"]
stream = ExtResource( 4 )
bus = "Sfx"

[node name="Crafted" type="AudioStreamPlayer" parent="Behaviors/Ambience"]
stream = ExtResource( 5 )
bus = "Sfx"

[node name="Mount" type="AudioStreamPlayer" parent="Behaviors/Ambience"]
stream = ExtResource( 6 )
bus = "Sfx"

[node name="MoveCargo" type="AudioStreamPlayer" parent="Behaviors/Ambience"]
stream = ExtResource( 79 )
bus = "Sfx"

[node name="Trade" type="AudioStreamPlayer" parent="Behaviors/Ambience"]
stream = ExtResource( 82 )
bus = "Sfx"

[node name="UseItem" type="AudioStreamPlayer" parent="Behaviors/Ambience"]
stream = ExtResource( 78 )
bus = "Sfx"

[node name="Warp" type="AudioStreamPlayer" parent="Behaviors/Ambience"]
stream = ExtResource( 7 )
bus = "Sfx"

[node name="Drop" type="AudioStreamPlayer" parent="Behaviors/Ambience"]
stream = ExtResource( 8 )
bus = "Sfx"

[node name="Grab" type="AudioStreamPlayer" parent="Behaviors/Ambience"]
stream = ExtResource( 9 )
bus = "Sfx"

[node name="scanner" type="Node" parent="Behaviors/Ambience"]

[node name="ship" type="AudioStreamPlayer" parent="Behaviors/Ambience/scanner"]
stream = ExtResource( 86 )
bus = "Sfx"

[node name="item" type="AudioStreamPlayer" parent="Behaviors/Ambience/scanner"]
stream = ExtResource( 50 )
bus = "Sfx"

[node name="planet" type="AudioStreamPlayer" parent="Behaviors/Ambience/scanner"]
stream = ExtResource( 70 )
bus = "Sfx"

[node name="UIManager" type="Node" parent="Behaviors"]
script = ExtResource( 10 )
animator = NodePath("PopingAnimatorShader")

[node name="PopingAnimatorShader" type="AnimationPlayer" parent="Behaviors/UIManager"]
root_node = NodePath("../../../Camera-GUI/ViewportContainer")
anims/popin = ExtResource( 11 )
anims/slow_popin = SubResource( 1 )

[node name="Memory" type="Node" parent="Behaviors"]
script = ExtResource( 12 )
Occluder = NodePath("../../BG/Occlusion")

[node name="Scanner" type="Node" parent="Behaviors"]
script = ExtResource( 13 )

[node name="AP" type="Node" parent="Behaviors"]
script = ExtResource( 14 )

[node name="SpriteLoader" type="Node" parent="Behaviors"]
script = ExtResource( 15 )
levelLoaderNode = NodePath("../LevelLoader")
ghost_material = ExtResource( 16 )

[node name="Tween" type="Tween" parent="Behaviors/SpriteLoader"]

[node name="Merchant" type="Node" parent="Behaviors"]
script = ExtResource( 81 )

[node name="Outlines" type="Node" parent="Behaviors"]
script = ExtResource( 17 )

[node name="Compactor" type="Node" parent="Behaviors"]
script = ExtResource( 18 )

[node name="Player" type="Node" parent="Behaviors"]
script = ExtResource( 19 )
levelLoaderNode = NodePath("../LevelLoader")
InventoryDialog = NodePath("../../Camera-GUI/SafeArea/InventoryRoot/InventoryV2")
TargettingHUD = NodePath("../../Camera-GUI/SafeArea/TargettingRoot/TargettingHUD")

[node name="AI" type="Node" parent="Behaviors"]
script = ExtResource( 20 )
targetting = NodePath("../Targetting")

[node name="Damage" type="Node" parent="Behaviors"]
script = ExtResource( 21 )

[node name="Shield" type="Node" parent="Behaviors"]
script = ExtResource( 22 )

[node name="Anomaly" type="Node" parent="Behaviors"]
script = ExtResource( 23 )

[node name="Inventory" type="Node" parent="Behaviors"]
script = ExtResource( 24 )

[node name="LevelLoader" type="Node" parent="Behaviors"]
script = ExtResource( 25 )
LoadingNode = NodePath("../../Loading-FX/Starfield")

[node name="Animation" type="Node" parent="Behaviors"]
script = ExtResource( 30 )

[node name="Movement" type="Node" parent="Behaviors"]
script = ExtResource( 26 )
levelLoaderNode = NodePath("../LevelLoader")

[node name="Crafting" type="Node" parent="Behaviors"]
script = ExtResource( 27 )

[node name="Scoring" type="Node" parent="Behaviors"]
script = ExtResource( 28 )

[node name="Targetting" type="Node" parent="Behaviors"]
script = ExtResource( 29 )
TargettingHUD = NodePath("../../Camera-GUI/SafeArea/TargettingRoot/TargettingHUD")

[node name="Teleport" type="Node" parent="Behaviors"]
script = ExtResource( 83 )

[node name="EnergyRegen" type="Node" parent="Behaviors"]
script = ExtResource( 31 )

[node name="HullRegen" type="Node" parent="Behaviors"]
script = ExtResource( 32 )

[node name="Tutorial" type="Node" parent="Behaviors"]
script = ExtResource( 33 )

[node name="LocalSave" type="Node" parent="Behaviors"]
script = ExtResource( 68 )

[node name="Runes" type="Node" parent="Behaviors"]

[node name="Runaway" type="Node" parent="Behaviors/Runes"]
script = ExtResource( 69 )

[node name="Radiation" type="Node" parent="Behaviors/Runes"]
script = ExtResource( 73 )

[node name="NewFriend" type="Node" parent="Behaviors/Runes"]
script = ExtResource( 75 )

[node name="JergQueen" type="Node" parent="Behaviors/Runes"]
script = ExtResource( 48 )

[node name="Assimilation" type="Node" parent="Behaviors/Runes"]
script = ExtResource( 88 )

[node name="RandomLog" type="Node" parent="Behaviors"]
script = ExtResource( 44 )

[node name="Effects" type="Node" parent="Behaviors"]
script = ExtResource( 45 )

[node name="Consumable" type="Node" parent="Behaviors"]
script = ExtResource( 87 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 5120, 5120 )
region_enabled = true
region_rect = Rect2( -10240, -10240, 20480, 20480 )

[node name="Node2D" type="Node2D" parent="BG"]
position = Vector2( -5000, -5000 )

[node name="Fractal_no" type="Sprite" parent="BG/Node2D"]
position = Vector2( -1496.44, -1498.22 )
scale = Vector2( 5, 5 )
texture = ExtResource( 34 )
region_rect = Rect2( -10240, -10240, 20480, 20480 )
script = ExtResource( 35 )
__meta__ = {
"_editor_description_": ""
}
parallax = 4000.0
camera = NodePath("../../../Camera2D")

[node name="FoW" parent="BG" instance=ExtResource( 43 )]
position = Vector2( -5184, -5184 )

[node name="Occlusion" type="Sprite" parent="BG"]
modulate = Color( 0.196078, 0.321569, 1, 0.921569 )
material = ExtResource( 36 )
position = Vector2( -64, -64 )
scale = Vector2( 128, 128 )

[node name="base_green" parent="." instance=ExtResource( 37 )]
position = Vector2( 5120, 5120 )

[node name="BorderTiles" parent="." instance=ExtResource( 71 )]

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
copy_mode = 2

[node name="OverlayTiles" type="Node" parent="."]

[node name="mouse_targetting" type="Node2D" parent="OverlayTiles"]
script = ExtResource( 38 )

[node name="targetting" parent="OverlayTiles/mouse_targetting" instance=ExtResource( 39 )]

[node name="GameTiles" type="Node2D" parent="."]

[node name="World-GUI" type="Node" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 704, 448 )
current = true
limit_left = -10000
limit_top = -10000
limit_right = 1000000
limit_bottom = 1000000
script = ExtResource( 42 )
follow_smooth = 35.0
levelLoaderNode = NodePath("../Behaviors/LevelLoader")

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="Camera-GUI" type="CanvasLayer" parent="."]

[node name="SafeArea" type="Control" parent="Camera-GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 41 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD_root" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 47 )
__meta__ = {
"_edit_use_anchors_": false
}
pc_hud = ExtResource( 46 )
mobile_hud = ExtResource( 40 )

[node name="TargettingRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargettingHUD" parent="Camera-GUI/SafeArea/TargettingRoot" instance=ExtResource( 51 )]
visible = false
Transition = false

[node name="OptionsRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="Camera-GUI/SafeArea/OptionsRoot" instance=ExtResource( 53 )]
visible = false

[node name="ValidateDiagRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValidateDiag" parent="Camera-GUI/SafeArea/ValidateDiagRoot" instance=ExtResource( 54 )]
visible = false

[node name="TutorialRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" parent="Camera-GUI/SafeArea/TutorialRoot" instance=ExtResource( 55 )]
visible = false

[node name="InventoryRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryV2" parent="Camera-GUI/SafeArea/InventoryRoot" instance=ExtResource( 56 )]
visible = false

[node name="TransferInventoryRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransferInventoryV2" parent="Camera-GUI/SafeArea/TransferInventoryRoot" instance=ExtResource( 57 )]
visible = false

[node name="ConverterRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConverterV2" parent="Camera-GUI/SafeArea/ConverterRoot" instance=ExtResource( 58 )]
visible = false
CraftingBehavior = NodePath("../../../../Behaviors/Crafting")

[node name="TradingRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trading" parent="Camera-GUI/SafeArea/TradingRoot" instance=ExtResource( 80 )]
visible = false

[node name="SelectMultiTargetRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultipleTarget" parent="Camera-GUI/SafeArea/SelectMultiTargetRoot" instance=ExtResource( 90 )]
visible = false

[node name="SelectTargetRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectTarget" parent="Camera-GUI/SafeArea/SelectTargetRoot" instance=ExtResource( 52 )]
visible = false

[node name="SelectHackRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HackTarget" parent="Camera-GUI/SafeArea/SelectHackRoot" instance=ExtResource( 89 )]
visible = false

[node name="SettingsRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" parent="Camera-GUI/SafeArea/SettingsRoot" instance=ExtResource( 59 )]
visible = false

[node name="WelcomeScreenRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WelcomeScreen" parent="Camera-GUI/SafeArea/WelcomeScreenRoot" instance=ExtResource( 60 )]
visible = false

[node name="HowManyDiagRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowManyDiag" parent="Camera-GUI/SafeArea/HowManyDiagRoot" instance=ExtResource( 61 )]
visible = false

[node name="DescriptionRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" parent="Camera-GUI/SafeArea/DescriptionRoot" instance=ExtResource( 62 )]
visible = false

[node name="ApDebugWindow" parent="Camera-GUI/SafeArea" instance=ExtResource( 63 )]
visible = false
margin_left = 421.113
margin_top = 100.909
margin_right = -394.887
margin_bottom = 60.9087
AP_behavior_path = NodePath("../../../Behaviors/AP")

[node name="StoryPromptRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryPrompt" parent="Camera-GUI/SafeArea/StoryPromptRoot" instance=ExtResource( 72 )]
visible = false

[node name="TutoPromptRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutoPrompt" parent="Camera-GUI/SafeArea/TutoPromptRoot" instance=ExtResource( 64 )]
visible = false

[node name="FPSCounterRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSCounter" parent="Camera-GUI/SafeArea/FPSCounterRoot" instance=ExtResource( 65 )]
anchor_left = 1.0
anchor_top = 1.0
margin_left = -201.0
margin_top = -47.3069
margin_right = -79.0
margin_bottom = -6.30695

[node name="CrewRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crew" parent="Camera-GUI/SafeArea/CrewRoot" instance=ExtResource( 74 )]
visible = false

[node name="Fade_root" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" parent="Camera-GUI/SafeArea/Fade_root" instance=ExtResource( 49 )]
visible = false
Transition = false

[node name="DeathScreenRoot" type="Control" parent="Camera-GUI/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathScreen" parent="Camera-GUI/SafeArea/DeathScreenRoot" instance=ExtResource( 66 )]
visible = false

[node name="ViewportContainer" type="ViewportContainer" parent="Camera-GUI"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true
script = ExtResource( 77 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Camera-GUI/ViewportContainer"]
size = Vector2( 1280, 720 )
transparent_bg = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="Loading-FX" type="CanvasLayer" parent="."]

[node name="Starfield" parent="Loading-FX" instance=ExtResource( 67 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Loading-FX/Starfield"]
anims/popout = SubResource( 3 )
